# ts2rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  package.json  tsconfig.json
rs/test-driver/: Cargo.toml
rs/test-driver/src/: lib.rs
rs/test-driver/tests/: mod.rs
rs/test-driver/tests/resources/: 0001.txt
rs/test-driver/tests/resources/0001/: 0001.json  0001.txt  0002.txt  TestInterfaceName_2.json  types.ts
rs/test-driver/tests/resources/0002/: Address.json  Person.json  types.ts
rs/test-driver/tests/resources/0003/: Product.json  ShoppingCart.json  types.ts
rs/test-driver/tests/resources/0004/: Order.json  types.ts
rs/test-driver/tests/resources/0005/: Coordinate.json  DataPoint.json  Matrix.json
rs/test-driver/tests/resources/0006/: Company.json
rs/test-driver/tests/resources/0007/: EmptyCollections.json  OptionalFields.json  types.ts
rs/test-driver/tests/resources/0008/: Container.json  types.ts
rs/test-driver/tests/resources/0009/: ApiRequest_1.json  Status_2.json  types.ts
rs/test-driver/tests/resources/0010/: Task_1.json  types.ts
rs/test-driver/tests/resources/0011/: Config_1.json  DatabaseSchema_1.json  types.ts
rs/test-driver/tests/resources/0012/: GeometricShape_1.json  NamedTuple_1.json  types.ts
rs/test-driver/tests/resources/0013/: ApiResponse_1.json  ApiResponse_2.json  Shape_1.json  Shape_2.json
rs/test-driver/tests/resources/0014/: UserPage_1.json  (+1 more)
rs/to-rs/: Cargo.toml
rs/to-rs/benches/: to-rs.rs
rs/to-rs/src/: lib.rs  polyfills.js  to_rs_bundle.js
rs/to-rs/tests/: basic.rs  using_dev_dependencies.rs
(+112 files in other folders)
