[package]
name = "test-driver"
# description = ""
version = "0.0.1"
edition = "2024"
# repository = ""
# license = "" # e.g. `Apache-2.0`
# categories = []
# keywords = []
# documentation = "" # Alternative documentation
# rust-version = "" # Min required rust version

[dependencies]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"] # Used in the root .rs file to enable `#![cfg_attr(docsrs, feature(doc_cfg))]`