[package]
name = "to-rs"
# description = ""
version = "0.0.1"
edition = "2024"
# repository = ""
# license = "" # e.g. `Apache-2.0`
# categories = []
# keywords = []
# documentation = "" # Alternative documentation
# rust-version = "" # Min required rust version

todo remove if not binary
# [[bin]]
# name = "to-rs"
# path = "src/main.rs"

[dependencies]

todo remove the ones not needed
[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
criterion = "0.8"

todo remove if do not need benches
[[bench]]
name = "to-rs"
harness = false

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"] # Used in the root .rs file to enable `#![cfg_attr(docsrs, feature(doc_cfg))]`